refactor(solver): add Step Solver refactor(errors): name change fix(web): fix condition in upload page feat(templates): add new templates chore(swagger): fix descriptions
